@@ -805,21 +805,7 @@ name|name
 operator|.
 name|append
 argument_list|(
-literal|"_"
-argument_list|)
-expr_stmt|;
-name|name
-operator|.
-name|append
-argument_list|(
-name|startCode
-argument_list|)
-expr_stmt|;
-name|name
-operator|.
-name|append
-argument_list|(
-literal|"_"
+literal|","
 argument_list|)
 expr_stmt|;
 name|name
@@ -827,6 +813,20 @@ operator|.
 name|append
 argument_list|(
 name|port
+argument_list|)
+expr_stmt|;
+name|name
+operator|.
+name|append
+argument_list|(
+literal|","
+argument_list|)
+expr_stmt|;
+name|name
+operator|.
+name|append
+argument_list|(
+name|startCode
 argument_list|)
 expr_stmt|;
 return|return
